[metadata]
name = torchist
version = attr: torchist.__version__
description = NumPy-style histograms in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
keywords = torch, histogram
author = François Rozet
author_email = francois.rozet@outlook.com
license = MIT License
url = https://github.com/francois-rozet/torchist
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = file: requirements.txt
